# monoidal-lifts

./: .gitignore  monoidal-lifts.cabal
app/: Main.hs
