cabal-version:      3.0
name:               monoidal-lifts
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable monoidal-lifts
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
